--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,6 +1,8 @@
 body {
   font-family: $main-font;
   color: $main-text-color;
+  font-size: 16px;
+  letter-spacing: 0.04em;
 }
 
 .visually-hidden {
@@ -17,6 +19,9 @@ body {
 h1,
 h2,
 h3,
+h4,
+h5,
+h6,
 p {
   margin: 0;
 }
