Добавляет box-sizing: border-box ко всем элементам

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,3 +1,13 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+
 body {
   font-family: $main-font;
   color: $main-text-color;
