--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="contacts">
     <div class="container">
         <h2 class="contacts__title">Contacts and locations</h2>
         <ul class=" list contacts-card">
@@ -11,14 +11,15 @@
                 <p class="contacts-card__work-days">Saturday - Sunday</p>
                 <p class="contacts-card__working-hours">08:00 AM - 16:00 PM</p>
 
-                <ul class=" list contacts">
-                    <li class="contacts__item">
-                        <a href="tel:+61(0) 383 766 284" class="contacts__link button">+61(0) 383 766 284</a>
+                <ul class=" list contacts-list">
+                    <li class="contacts-list__item">
+                        <a href="tel:+61(0) 383 766 284" class="contacts-list__link button">+61(0) 383 766 284</a>
                     </li>
 
-                    <li class="contacts__item">
-                        <a href="mailto:noreply@envato.com" class="contacts__link button">noreply@envato.com</a>
+                    <li class="contacts-list__item">
+                        <a href="mailto:noreply@envato.com" class="contacts-list__link button">noreply@envato.com</a>
                     </li>
+                </ul>
             </li>
 
             <li class="contacts-card__item">
@@ -30,14 +31,15 @@
                 <p class="contacts-card__work-days">Saturday - Sunday</p>
                 <p class="contacts-card__working-hours">08:00 AM - 16:00 PM</p>
 
-                <ul class=" list contacts">
-                    <li class="contacts__item">
-                        <a href="tel:+61(0) 383 766 284" class="contacts__link button">+61(0) 383 766 284</a>
+                <ul class=" list contacts-list">
+                    <li class="contacts-list__item">
+                        <a href="tel:+61(0) 383 766 284" class="contacts-list__link button">+61(0) 383 766 284</a>
                     </li>
 
-                    <li class="contacts__item">
-                        <a href="mailto:noreply@envato.com" class="contacts__link button">noreply@envato.com</a>
+                    <li class="contacts-list__item">
+                        <a href="mailto:noreply@envato.com" class="contacts-list__link button">noreply@envato.com</a>
                     </li>
+                </ul>
             </li>
 
             <li class="contacts-card__item">
@@ -49,14 +51,15 @@
                 <p class="contacts-card__work-days">Saturday - Sunday</p>
                 <p class="contacts-card__working-hours">08:00 AM - 16:00 PM</p>
 
-                <ul class=" list contacts">
-                    <li class="contacts__item">
-                        <a href="tel:+61(0) 383 766 284" class="contacts__link button">+61(0) 383 766 284</a>
+                <ul class=" list contacts-list">
+                    <li class="contacts-list__item">
+                        <a href="tel:+61(0) 383 766 284" class="contacts-list__link button">+61(0) 383 766 284</a>
                     </li>
 
-                    <li class="contacts__item">
-                        <a href="mailto:noreply@envato.com" class="contacts__link button">noreply@envato.com</a>
+                    <li class="contacts-list__item">
+                        <a href="mailto:noreply@envato.com" class="contacts-list__link button">noreply@envato.com</a>
                     </li>
+                </ul>
             </li>
         </ul>
 
