--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,19 +1,21 @@
-<div>
-    <ul>
-        <li>
-            <img src="" alt="">
-            <img src="" alt="">
-            <p></p>
-        </li>
-        <li>
-            <img src="" alt="">
-            <img src="" alt="">
-            <p></p>
-        </li>
-        <li>
-            <img src="" alt="">
-            <img src="" alt="">
-            <p></p>
-        </li>
-    </ul>
-</div>
+<section class="">
+    <div>
+        <ul>
+            <li>
+                <img src="" alt="">
+                <title></title>
+                <p></p>
+            </li>
+            <li>
+                <img src="" alt="">
+                <title></title>
+                <p></p>
+            </li>
+            <li>
+                <img src="" alt="">
+                <title></title>
+                <p></p>
+            </li>
+        </ul>
+    </div>
+</section>
