--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,21 +1,22 @@
-<section class="">
-    <div>
-        <ul>
-            <li>
-                <img src="" alt="">
-                <title></title>
-                <p></p>
-            </li>
-            <li>
-                <img src="" alt="">
-                <title></title>
-                <p></p>
-            </li>
-            <li>
-                <img src="" alt="">
-                <title></title>
-                <p></p>
-            </li>
-        </ul>
-    </div>
+<section class="advantages">
+    <ul class="advantages__list">
+         <li class="advantages__item">
+            <img src="" alt="">
+            <title>721</title>
+            <p>Aliquam ac dui vel dui vulputate
+            consectetur. Mauris massa.</p>
+        </li>
+        <li class="advantages__item">
+            <img src="" alt="">
+             <title>16KG</title>
+             <p>Aliquam ac dui vel dui vulputate
+            consectetur. Mauris massa.</p>
+        </li>
+        <li class="advantages__item">
+            <img src="" alt="">
+            <title>84</title>
+            <p>Aliquam ac dui vel dui vulputate
+            consectetur. Mauris massa.</p>
+        </li>
+    </ul>
 </section>
