--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,6 +1,28 @@
 <div class="container about">
-  <p class="about__label">tradition and love</p>
-  <h class="about__title">how it’s made?</h>
+  <p class="title about__label">tradition and love</p>
+  <h class="title about__title">how it’s made?</h>
+  <picture>
+    <source
+      srcset="./images/desktop/about/about.jpg 1x, ./images/desktop/about/about@2x.jpg 2x"
+      media="(min-width:1280px)"
+      type="image/jpeg"
+    />
+    <source
+      srcset="./images/tablet/about/about.jpg 1x, ./images/tablet/about/about@2x.jpg 2x"
+      media="(min-width:768px)"
+      type="image/jpeg"
+    />
+    <source
+      srcset="./images/mobile/about/about.jpg 1x, ./images/mobile/about/about@2x.jpg 2x"
+      media="(max-width:767.98px)"
+      type="image/jpeg"
+    />
+    <img
+      class="about__picture"
+      src="./images/mobile/about/about.jpg"
+      alt="Коровка и графин с молоком"
+    />
+  </picture>
   <p class="about__lead">
     Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem
     eget, egestas eros. Maecenas eleifend erat at justo fringilla.
@@ -8,7 +30,7 @@
   <p>
     Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in
     imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus.
-    Cras massa nibh, tincidunt. Aliquam erat volutpat. Aenean accumsan.
+    Cras massa nibh, tincidunt.
   </p>
-  <p></p>
+  <p>Aliquam erat volutpat. Aenean accumsan.</p>
 </div>
