section-products html modified

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,22 +1,22 @@
 <section class="products">
     <div class="container">
         <p class="title-label">100% natural</p>
-        <h2 class="title products-title">products</h2>
-        <ul class="list products-list">
-            <li class="products-item">
-                <h3 class="proudcts-item__name">ice cream</h3>
-                <p class="products-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-                <button type="button" class="products-button"></button>
+        <h2 class="title products__title">products</h2>
+        <ul class="list products__list">
+            <li class="products__item">
+                <h3 class="proudcts__item-name">ice cream</h3>
+                <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+                <button type="button" class="products__item-button"></button>
             </li>
-            <li class="products-item">
-                <h3 class="proudcts-item__name">ice coffee</h3>
-                <p class="products-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-                <button type="button" class="products-button"></button>
+            <li class="products__item">
+                <h3 class="proudcts__item-name">ice coffee</h3>
+                <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+                <button type="button" class="products__item-button"></button>
             </li>
-            <li class="products-item">
-                <h3 class="proudcts-item__name">milkshakes</h3>
-                <p class="products-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-                <button type="button" class="products-button"></button>
+            <li class="products__item">
+                <h3 class="proudcts-item-name">milkshakes</h3>
+                <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+                <button type="button" class="products__item-button"></button>
             </li>
         
         </ul>
