--- a/src/sass/components/_label.scss
+++ b/src/sass/components/_label.scss
@@ -1,4 +1,10 @@
 .label {
+  font-family: $title-font;
+  font-weight: 400;
+  font-size: 34px;
+  line-height: 1.15;
+  text-align: center;
+  text-transform: uppercase;
   font-size: 18px;
   line-height: 1.17;
 
