--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -8,6 +8,8 @@ $white-text-color: #ffffff;
 $hero-bg: #ffb8ca;
 $mobile-menu-bg: #e17992;
 $light-bg: #fff5f6;
+$btn-hvr-light-bg: #ecebeb;
+$btn-hvr-dark-bg: #c7133e;
 
 $main-font: 'DM Sans', sans-serif;
 $title-font: 'Titan One', sans-serif;
