--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,74 +1,74 @@
 <section class="contacts">
     <div class="container">
         <h2 class="contacts__title">Contacts and locations</h2>
-        <ul class=" list contacts-card">
-            <li class="contacts-card__item">
-                <p class="contacts-card__type">Cafe</p>
-                <p class="contacts-card__location">Chicago</p>
-                <p class="contacts-card__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                <p class="contacts-card__work-days">Monday - Friday</p>
-                <p class="contacts-card__working-hours">06:00 AM - 10:00 PM</p>
-                <p class="contacts-card__work-days">Saturday - Sunday</p>
-                <p class="contacts-card__working-hours">08:00 AM - 16:00 PM</p>
+        <ul class=" list contacts__list">
+            <li class="contacts__item">
+                <p class="contacts__type">Cafe</p>
+                <p class="contacts__location">Chicago</p>
+                <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                <p class="contacts__work-days">Monday - Friday</p>
+                <p class="contacts__working-hours">06:00 AM - 10:00 PM</p>
+                <p class="contacts__work-days">Saturday - Sunday</p>
+                <p class="contacts__working-hours">08:00 AM - 16:00 PM</p>
 
-                <ul class=" list contacts-list">
-                    <li class="contacts-list__item">
-                        <a href="tel:+61(0) 383 766 284" class="contacts-list__link button">+61(0) 383 766 284</a>
+                <ul class=" list contact-info">
+                    <li class="contact-info__item">
+                        <a href="tel:+61(0)383766284" rel="noreferrer noopener" class="contact-info__link">+61(0) 383 766 284</a>
                     </li>
 
-                    <li class="contacts-list__item">
-                        <a href="mailto:noreply@envato.com" class="contacts-list__link button">noreply@envato.com</a>
-                    </li>
-                </ul>
-            </li>
-
-            <li class="contacts-card__item">
-                <p class="contacts-card__type">Food truck</p>
-                <p class="contacts-card__location">Los Angeles</p>
-                <p class="contacts-card__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                <p class="contacts-card__work-days">Monday - Friday</p>
-                <p class="contacts-card__working-hours">06:00 AM - 10:00 PM</p>
-                <p class="contacts-card__work-days">Saturday - Sunday</p>
-                <p class="contacts-card__working-hours">08:00 AM - 16:00 PM</p>
-
-                <ul class=" list contacts-list">
-                    <li class="contacts-list__item">
-                        <a href="tel:+61(0) 383 766 284" class="contacts-list__link button">+61(0) 383 766 284</a>
-                    </li>
-
-                    <li class="contacts-list__item">
-                        <a href="mailto:noreply@envato.com" class="contacts-list__link button">noreply@envato.com</a>
+                    <li class="contact-info__item">
+                        <a href="mailto:noreply@envato.com" rel="noreferrer noopener" class="contact-info__link">noreply@envato.com</a>
                     </li>
                 </ul>
             </li>
 
-            <li class="contacts-card__item">
-                <p class="contacts-card__type">Cafe</p>
-                <p class="contacts-card__location">New York</p>
-                <p class="contacts-card__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                <p class="contacts-card__work-days">Monday - Friday</p>
-                <p class="contacts-card__working-hours">06:00 AM - 10:00 PM</p>
-                <p class="contacts-card__work-days">Saturday - Sunday</p>
-                <p class="contacts-card__working-hours">08:00 AM - 16:00 PM</p>
+            <li class="contacts__item">
+                <p class="contacts__type">Food truck</p>
+                <p class="contacts__location">Los Angeles</p>
+                <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                <p class="contacts__work-days">Monday - Friday</p>
+                <p class="contacts__working-hours">06:00 AM - 10:00 PM</p>
+                <p class="contacts__work-days">Saturday - Sunday</p>
+                <p class="contacts__working-hours">08:00 AM - 16:00 PM</p>
 
-                <ul class=" list contacts-list">
-                    <li class="contacts-list__item">
-                        <a href="tel:+61(0) 383 766 284" class="contacts-list__link button">+61(0) 383 766 284</a>
+                <ul class=" list contact-info">
+                    <li class="contact-info__item">
+                        <a href="tel:+61(0)383766284" rel="noreferrer noopener" class="contact-info__link">+61(0) 383 766 284</a>
                     </li>
 
-                    <li class="contacts-list__item">
-                        <a href="mailto:noreply@envato.com" class="contacts-list__link button">noreply@envato.com</a>
+                    <li class="contact-info__item">
+                        <a href="mailto:noreply@envato.com" rel="noreferrer noopener" class="contact-info__link">noreply@envato.com</a>
+                    </li>
+                </ul>
+            </li>
+
+            <li class="contacts__item">
+                <p class="contacts__type">Cafe</p>
+                <p class="contacts__location">New York</p>
+                <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                <p class="contacts__work-days">Monday - Friday</p>
+                <p class="contacts__working-hours">06:00 AM - 10:00 PM</p>
+                <p class="contacts__work-days">Saturday - Sunday</p>
+                <p class="contacts__working-hours">08:00 AM - 16:00 PM</p>
+
+                <ul class=" list contact-info">
+                    <li class="contact-info__item">
+                        <a href="tel:+61(0)383766284" rel="noreferrer noopener" class="contact-info__link">+61(0) 383 766 284</a>
+                    </li>
+
+                    <li class="contact-info__item">
+                        <a href="mailto:noreply@envato.com" rel="noreferrer noopener" class="contact-info__link">noreply@envato.com</a>
                     </li>
                 </ul>
             </li>
         </ul>
 
-        <ul class="list contacts-button">
-            <li class="contacts-button__item">
+        <ul class="list more-info">
+            <li class="more-info__item">
                 <button class="button" aria-label="Our Locations">Our Locations</button>
             </li>
 
-            <li class="contacts-button__item">
+            <li class="more-info__item">
                 <button class="button" aria-label="Franchise">Franchise</button>
             </li>
         </ul>
