--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,8 +1,8 @@
 <section class="hero">
   <h1 class="hero__title"><span class="hero__title--white">ice cream made with</span></br>passion</h1>
   <ul class="list hero__anchors">
-    <li class="hero__btn"><button class="hero__button">Products</button></li>
-    <li class="hero__btn"><button class="hero__button">How it’s made?</button></li>
+    <li class="hero__btn"><button class="button button--dark hero__button">Products</button></li>
+    <li class="hero__btn"><button class="button button--light hero__button">How it’s made?</button></li>
   </ul>
   <ul class="list hero__numbers">
     <li class="hero__numbers-item">
