--- a/src/sass/layout.scss/_hero.scss
+++ b/src/sass/layout.scss/_hero.scss
@@ -1,8 +1,8 @@
 .hero {
   width: 100%;
-  height: 500px;
+  min-height: 500px;
   /* background-color: $hero-bg; */
-  padding: 20px 30px;
+  padding: 193px 30px 160px 30px;
 
   @include for-tablet {
     padding: 35px;
@@ -15,19 +15,26 @@
     padding: 115px 60px;
   }
   /* background-position: 65% 50%; */
-  background-image: radial-gradient(circle at 65% 50%, #ffa5ba 50%, $hero-bg 50%);
+  background-repeat: no-repeat;
+  background-position: 80% bottom;
+  background-image: url('../images/mobile/hero/hero1.png'),
+    radial-gradient(circle at 65% 50%, #ffa5ba 50%, $hero-bg 50%);
   /* background-image: radial-gradient(#ffa5ba, $hero-bg); */
 }
 
 .hero__title {
+  margin-bottom: 20px;
   width: 218px;
-  padding-top: 193px;
   font-family: Titan One;
   font-weight: 400;
   font-size: 48px;
   line-height: 0.965;
   text-transform: uppercase;
   color: $accent-dark;
+
+  @include for-desktop {
+    margin-bottom: 25px;
+  }
 }
 
 .hero__title--white {
@@ -42,10 +49,16 @@
 
 .hero__anchors {
   display: flex;
+}
 
-  &:not(:last-child) {
-    margin-right: 8px;
-  }
+.hero__btn:not(:last-child) {
+  margin-right: 8px;
+}
+
+.hero__button {
+  min-width: 62px;
+  font-size: 8px;
+  line-height: 1.25;
 }
 
 .hero__text {
