--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,19 +1,21 @@
+
+
 <section class="advantages">
     <ul class="advantages__list">
          <li class="advantages__item">
-            <img src="" alt="">
+            <img src="../images/mobile/advantages/icon1_mobile.png" alt="bucket">
             <title>721</title>
             <p>Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
         </li>
         <li class="advantages__item">
-            <img src="" alt="">
-             <title>16KG</title>
+            <img src="" alt="bucketapple">
+             <p>16KG</p>
              <p>Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
         </li>
         <li class="advantages__item">
-            <img src="" alt="">
+            <img src="" alt="heart">
             <title>84</title>
             <p>Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
