--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0;
 
   height: 44px;
   border-radius: 22px;
@@ -11,13 +12,16 @@
   font-size: 16px;
   line-height: 1.31;
 
+  cursor: pointer;
+
   transition: background-color $animation;
 }
 .button--dark {
   background-color: $accent-dark;
   color: $white-text-color;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: $btn-hvr-dark-bg;
   }
 }
@@ -25,7 +29,8 @@
   background-color: $btn-light-color;
   color: $accent-dark;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: $btn-hvr-light-bg;
   }
 }
