--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 10px 15px;
 
   height: 44px;
   border-radius: 22px;
