--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,5 @@
 <div class="container about">
-  <p class="title about__label">tradition and love</p>
+  <p class="label about__label">tradition and love</p>
   <h class="title about__title">how it’s made?</h>
   <picture>
     <source
@@ -23,14 +23,20 @@
       alt="Коровка и графин с молоком"
     />
   </picture>
-  <p class="about__lead">
+  <p class="about__lead about__paragraph">
     Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem
     eget, egestas eros. Maecenas eleifend erat at justo fringilla.
   </p>
-  <p>
+  <p class="about__text about__paragraph">
     Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in
     imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus.
     Cras massa nibh, tincidunt.
   </p>
-  <p>Aliquam erat volutpat. Aenean accumsan.</p>
+  <p class="about__text about__paragraph">Aliquam erat volutpat. Aenean accumsan.</p>
+  <button class="button button--light about__btn">
+    Read more
+    <svg width="7" height="10">
+      <use href="./images/icons.svg#check-right"></use>
+    </svg>
+  </button>
 </div>
