--- a/src/sass/layout.scss/_advantages.scss
+++ b/src/sass/layout.scss/_advantages.scss
@@ -3,18 +3,38 @@
 
 }
 
-.advantages__list {
+.advantages__list li {
+    list-style:none;
 
+    &:not(:last-child) {
+        padding-bottom: 38px;
+    }
 }
 
 .advantages__item {
-    & .p {
+    & .advantages__title {
         font-family: "DM Sans";
         font-style: normal;
         font-weight: 700;
         font-size: 12px;
         line-height: 170%;
-
+        
         color: #000000;
+    }
+    
+    & .advantages__heading {
+        width: 98px;
+        height: 56px;
+        margin-top: 16px;
+
+        font-family: Titan One;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 36px;
+        line-height: 41px;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+
+        color: #D41443;
     }
 }
