--- a/src/sass/layout.scss/_advantages.scss
+++ b/src/sass/layout.scss/_advantages.scss
@@ -1,6 +1,6 @@
 
 .advantages {
-
+    background: #FFF5F6;
 }
 
 .advantages__list li {
@@ -18,16 +18,16 @@
         font-weight: 700;
         font-size: 12px;
         line-height: 170%;
+        padding-right: 70px;
         
         color: #000000;
     }
     
     & .advantages__heading {
-        width: 98px;
         height: 56px;
         margin-top: 16px;
 
-        font-family: Titan One;
+        font-family: "Titan One";
         font-style: normal;
         font-weight: normal;
         font-size: 36px;
