--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -35,7 +35,7 @@
   <p class="about__text about__paragraph">Aliquam erat volutpat. Aenean accumsan.</p>
   <button class="button button--light about__btn">
     Read more
-    <svg width="7" height="10">
+    <svg class="about__icon" width="7" height="10">
       <use href="./images/icons.svg#check-right"></use>
     </svg>
   </button>
