Добавляет паддинги секции

--- a/src/sass/layout.scss/_about.scss
+++ b/src/sass/layout.scss/_about.scss
@@ -4,6 +4,9 @@
   align-items: center;
   text-align: center;
 
+  padding-top: 125px;
+  padding-bottom: 20px;
+
   font-weight: 500;
 
   background-color: #fff5f6;
