--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -53,7 +53,7 @@
 
                 <ul class=" list contact-info">
                     <li class="contact-info__item">
-                        <a href="tel:+61(0)383766284" rel="noreferrer noopener" class="contact-info__link">+61(0) 383 766 284</a>
+                        <a href="tel:+61(0)383766284" rel="noreferrer noopener" class="contact-info__link link">+61(0) 383 766 284</a>
                     </li>
 
                     <li class="contact-info__item">
