--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,20 +1,35 @@
 <section class="hero">
-  <h1 class="hero__title"><span class="hero__title--white">ice cream made with</span></br>passion</h1>
-  <ul class="list hero__anchors">
-    <li class="hero__btn"><button class="button button--dark hero__button">Products</button></li>
-    <li class="hero__btn"><button class="button button--light hero__button">How it’s made?</button></li>
-  </ul>
-  <ul class="list hero__numbers">
-    <li class="hero__numbers-item">
-      <p class="hero__numbers-text"><span class="number">16</span>cafes</p>
-    </li>
-    <li class="hero__numbers-item">
-      <p class="hero__numbers-text"><span class="number">23</span>food trucks</p>
-    </li>
-  </ul>
-  <p class="hero__text">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-    labore et
-  </p>
-  <button class="hero__modal-btn"></button>
+  <div class="container">
+    <div class="hero__flex">
+      <h1 class="title hero__title">
+        <span class="hero__title--white">ice cream made with</span> passion
+      </h1>
+      <ul class="list hero__links">
+        <li class="hero__anchor">
+          <button class="button button--dark hero__button">Products</button>
+        </li>
+        <li class="hero__anchor">
+          <button class="button button--light hero__button hero__button--about">
+            How it’s made?
+          </button>
+        </li>
+      </ul>
+      <!-- меня не очень устраивают имена классов hero__branches-item и hero__branches-type, но Юля тоже так называла -->
+      <ul class="list hero__branches">
+        <li class="hero__branches-item">
+          <p class="hero__branches-type"><span class="hero__number">16</span> cafes</p>
+        </li>
+        <li class="hero__branches-item">
+          <p class="hero__branches-type"><span class="hero__number">23</span> food trucks</p>
+        </li>
+      </ul>
+    </div>
+    <div class="hero__modal">
+      <p class="hero__modal-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et
+      </p>
+      <button class="hero__modal-btn"></button>
+    </div>
+  </div>
 </section>
