--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -13,11 +13,11 @@
 
                 <ul class=" list contact-info">
                     <li class="contact-info__item">
-                        <a href="tel:+61(0)383766284" rel="noreferrer noopener" class="contact-info__link">+61(0) 383 766 284</a>
+                        <a href="tel:+61(0)383766284" rel="noreferrer noopener" class="contact-info__link link">+61(0) 383 766 284</a>
                     </li>
 
                     <li class="contact-info__item">
-                        <a href="mailto:noreply@envato.com" rel="noreferrer noopener" class="contact-info__link">noreply@envato.com</a>
+                        <a href="mailto:noreply@envato.com" rel="noreferrer noopener" class="contact-info__link link">noreply@envato.com</a>
                     </li>
                 </ul>
             </li>
@@ -33,11 +33,11 @@
 
                 <ul class=" list contact-info">
                     <li class="contact-info__item">
-                        <a href="tel:+61(0)383766284" rel="noreferrer noopener" class="contact-info__link">+61(0) 383 766 284</a>
+                        <a href="tel:+61(0)383766284" rel="noreferrer noopener" class="contact-info__link link">+61(0) 383 766 284</a>
                     </li>
 
                     <li class="contact-info__item">
-                        <a href="mailto:noreply@envato.com" rel="noreferrer noopener" class="contact-info__link">noreply@envato.com</a>
+                        <a href="mailto:noreply@envato.com" rel="noreferrer noopener" class="contact-info__link link">noreply@envato.com</a>
                     </li>
                 </ul>
             </li>
@@ -57,7 +57,7 @@
                     </li>
 
                     <li class="contact-info__item">
-                        <a href="mailto:noreply@envato.com" rel="noreferrer noopener" class="contact-info__link">noreply@envato.com</a>
+                        <a href="mailto:noreply@envato.com" rel="noreferrer noopener" class="contact-info__link link">noreply@envato.com</a>
                     </li>
                 </ul>
             </li>
@@ -65,11 +65,19 @@
 
         <ul class="list more-info">
             <li class="more-info__item">
-                <button class="button" aria-label="Our Locations">Our Locations</button>
+                <button class="button" aria-label="Our Locations">Our Locations
+                    <svg class="button__icon  button__icon--light" width="4.43" height= "8">
+                        <use href="./images/icons.svg#check-right"></use>
+                        </svg>
+                </button>
             </li>
 
             <li class="more-info__item">
-                <button class="button" aria-label="Franchise">Franchise</button>
+                <button class="button" aria-label="Franchise">Franchise
+                    <svg class="button__icon  button__icon--dark" width="4.43" height= "8">
+                        <use href="./images/icons.svg#check-right"></use>
+                        </svg>
+                </button>
             </li>
         </ul>
     </div>
