--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,35 +1,39 @@
 <section class="hero">
-  <div class="container">
-    <div class="hero__flex">
-      <h1 class="title hero__title">
-        <span class="hero__title--white">ice cream made with</span> passion
-      </h1>
-      <ul class="list hero__links">
-        <li class="hero__anchor">
-          <button class="button button--dark hero__button">Products</button>
-        </li>
-        <li class="hero__anchor">
-          <button class="button button--light hero__button hero__button--about">
-            How it’s made?
-          </button>
-        </li>
-      </ul>
-      <!-- меня не очень устраивают имена классов hero__branches-item и hero__branches-type, но Юля тоже так называла -->
-      <ul class="list hero__branches">
-        <li class="hero__branches-item">
-          <p class="hero__branches-type"><span class="hero__number">16</span> cafes</p>
-        </li>
-        <li class="hero__branches-item">
-          <p class="hero__branches-type"><span class="hero__number">23</span> food trucks</p>
-        </li>
-      </ul>
-    </div>
-    <div class="hero__modal">
-      <p class="hero__modal-text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore et
-      </p>
-      <button class="hero__modal-btn"></button>
-    </div>
+  <div class="hero__main-info">
+    <h1 class="title hero__title">
+      <span class="hero__title--white">ice cream made with</span> passion
+    </h1>
+    <ul class="list hero__links">
+      <li class="hero__anchor">
+        <button class="button button--dark hero__button">Products</button>
+      </li>
+      <li class="hero__anchor">
+        <button class="button button--light hero__button hero__button--about">
+          How it’s made?
+        </button>
+      </li>
+    </ul>
+  </div>
+
+  <!-- меня не очень устраивают имена классов hero__branches-item и hero__branches-type, но Юля тоже так называла -->
+  <ul class="list hero__branches">
+    <li class="hero__branches-item">
+      <p class="hero__branches-type"><span class="hero__number">16</span> cafes</p>
+    </li>
+    <li class="hero__branches-item">
+      <p class="hero__branches-type"><span class="hero__number">23</span> food trucks</p>
+    </li>
+  </ul>
+
+  <div class="hero__modal">
+    <p class="hero__modal-text">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+      labore et
+    </p>
+    <button class="hero__modal-btn">
+      <svg class="hero__icon" width="8" height="8">
+        <use href="./images/icons.svg#icon-arrow"></use>
+      </svg>
+    </button>
   </div>
 </section>
