--- a/src/sass/layout.scss/_hero.scss
+++ b/src/sass/layout.scss/_hero.scss
@@ -1,31 +1,79 @@
 .hero {
+  position: relative;
   width: 100%;
-  min-height: 500px;
-  padding-top: 193px;
-  padding-bottom: 160px;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 480px;
 
   background-repeat: no-repeat;
+  background-size: 171px 410px, 100% 500px;
   background-position: 85% bottom;
   background-image: url('../images/mobile/hero/hero1.png'),
     radial-gradient(circle at 70% 52%, #ffa5ba 54%, $hero-bg 54%);
 
-  @include for-tablet {
-    padding-top: 140px;
-    padding-bottom: 40px;
-    position: relative;
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url('../images/mobile/hero/hero1@2x.png'),
+      radial-gradient(circle at 70% 52%, #ffa5ba 54%, $hero-bg 54%);
+  }
 
-    background-repeat: no-repeat;
-    background-position: 58% bottom, 92% bottom, 35px 90%;
-    background-image: url('../images/mobile/hero/hero1.png'), url('../images/tablet/hero/hero2.png'),
+  @include for-tablet {
+    max-width: 768px;
+    height: 400px;
+
+    background-position: 58% bottom, 95% bottom, 35px 90%;
+    background-size: 143px 336px, 168px 133px, 124px 126px, 100% 400px;
+    background-image: url('../images/tablet/hero/hero1.png'), url('../images/tablet/hero/hero2.png'),
       url('../images/tablet/hero/hero3.png'),
-      radial-gradient(circle at 60% 50%, #ffa5ba 35%, $hero-bg 24%);
+      radial-gradient(circle at 60% 50%, #ffa5ba 35%, $hero-bg 35%);
+
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url('../images/tablet/hero/hero1@2x.png'),
+        url('../images/tablet/hero/hero2@2x.png'), url('../images/tablet/hero/hero3@2x.png'),
+        radial-gradient(circle at 60% 50%, #ffa5ba 35%, $hero-bg 35%);
+    }
   }
 
   @include for-desktop {
-    margin-left: auto;
-    margin-right: auto;
+    height: 665px;
     max-width: 1280px;
-    padding: 115px 60px;
+
+    background-position: 58% bottom, 90% bottom, 115px 90%;
+    background-size: 236px 557px, 293px 232px, 188px 191px, 1280px 665px;
+    background-image: url('../images/desktop/hero/hero1.png'),
+      url('../images/desktop/hero/hero2.png'), url('../images/desktop/hero/hero3.png'),
+      radial-gradient(circle at 58% 50%, #ffa5ba 34%, $hero-bg 34%);
+
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url('../images/desktop/hero/hero1@2x.png'),
+        url('../images/desktop/hero/hero2@2x.png'), url('../images/desktop/hero/hero3@2x.png'),
+        radial-gradient(circle at 58% 50%, #ffa5ba 34%, $hero-bg 34%);
+    }
+  }
+}
+
+.hero__main-info {
+  position: absolute;
+  top: 193px;
+  left: 20px;
+
+  @include for-tablet {
+    top: 102px;
+    left: 35px;
+  }
+
+  @include for-desktop {
+    top: 171px;
+    left: 115px;
   }
 }
 
@@ -77,32 +125,39 @@
 }
 
 .hero__button {
-  padding: 0;
-  margin: 0;
-  min-width: 62px;
+  width: 62px;
   height: 24px;
   font-size: 8px;
   line-height: 1.25;
-}
-.hero__button--about {
-  width: 82px;
-}
 
-.hero-flex {
-  @include for-tablet {
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
+  @include for-desktop {
+    width: 104px;
+    height: 40px;
+    font-size: 14px;
+    line-height: 1.29;
   }
 }
+.hero__button--about {
+  width: 90px;
+
+  @include for-desktop {
+    width: 138px;
+  }
+}
+
 .hero__branches {
   display: none;
 
   @include for-tablet {
     display: block;
     position: absolute;
-    top: 140px;
+    top: 102px;
     right: 35px;
+  }
+
+  @include for-desktop {
+    top: 181px;
+    right: 115px;
   }
 }
 
@@ -129,20 +184,56 @@
     border-radius: 50%;
     background-color: #ffffff;
   }
+
+  @include for-desktop {
+    width: 92px;
+
+    &:not(:last-child) {
+      margin-bottom: 40px;
+    }
+
+    &:after {
+      content: '';
+      display: block;
+
+      position: absolute;
+      z-index: -1;
+      top: -30px;
+      left: 80px;
+
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background-color: #ffffff;
+    }
+  }
 }
 
 .hero__branches-type {
-  font-size: 8px;
-  line-height: 1.25;
-  text-align: right;
-  color: $white-text-color;
+  @include for-tablet {
+    font-size: 8px;
+    line-height: 1.25;
+    text-align: right;
+    color: $white-text-color;
+  }
+
+  @include for-desktop {
+    font-size: 14px;
+    line-height: 1.29;
+  }
 }
 
 .hero__number {
-  font-family: 'Titan One';
-  font-size: 28px;
-  line-height: 1.14;
-  color: $accent-dark;
+  @include for-tablet {
+    font-family: 'Titan One';
+    font-size: 28px;
+    line-height: 1.14;
+    color: $accent-dark;
+  }
+  @include for-desktop {
+    font-size: 46px;
+    line-height: 1.152px;
+  }
 }
 
 .hero__modal {
@@ -150,9 +241,14 @@
 
   @include for-tablet {
     position: absolute;
-    bottom: 60px;
+    bottom: 33px;
     left: 160px;
     display: block;
+  }
+
+  @include for-desktop {
+    top: 500px;
+    left: 300px;
   }
 }
 
@@ -162,12 +258,34 @@
   font-size: 8px;
   line-height: 1.5;
   color: $white-text-color;
+
+  @include for-desktop {
+    width: 200px;
+    font-size: 14px;
+    line-height: 1.4;
+  }
+}
+
+.hero__icon {
+  fill: $accent-dark;
 }
 
 .hero__modal-btn {
   display: none;
 
   @include for-tablet {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    border: none;
+    background-color: $btn-light-color;
+  }
+
+  @include for-desktop {
+    width: 26px;
+    height: 26px;
   }
 }
