доделал мобильную версию

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -4,20 +4,20 @@
     <ul class="advantages__list">
          <li class="advantages__item">
             <img src="../src/images/mobile/advantages/icon1_mobile.png" alt="bucket">
-            <h1 class="advantages__heading">721</h1>
-            <p class="advantages__title">Aliquam ac dui vel dui vulputate
+            <h2 class="advantages__heading">721</h2>
+            <p class="advantages__text">Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
         </li>
         <li class="advantages__item">
             <img src="../src/images/mobile/advantages/icon2_mobile.png" alt="bucketapple">
-             <h1 class="advantages__heading">16KG</h1>
-             <p class="advantages__title">Aliquam ac dui vel dui vulputate
+             <h2 class="advantages__heading">16KG</h2>
+             <p class="advantages__text">Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
         </li>
         <li class="advantages__item">
             <img src="../src/images/mobile/advantages/icon3_mobile.png" alt="heart">
-            <h1 class="advantages__heading">84</h1>
-            <p class="advantages__title" >Aliquam ac dui vel dui vulputate
+            <h2 class="advantages__heading">84</h2>
+            <p class="advantages__text" >Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
         </li>
     </ul>
