--- a/src/sass/layout.scss/_advantages.scss
+++ b/src/sass/layout.scss/_advantages.scss
@@ -12,10 +12,10 @@
 }
 
 .advantages__item {
-    & .advantages__title {
+    & .advantages__text {
         font-family: "DM Sans";
         font-style: normal;
-        font-weight: 700;
+        font-weight: bold;
         font-size: 12px;
         line-height: 170%;
         padding-right: 70px;
