anchors were added

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,12 +5,17 @@
     </h1>
     <ul class="list hero__links">
       <li class="hero__anchor">
+        <a href="#products" class="link">
         <button class="button button--dark hero__button">Products</button>
+        </a>
       </li>
+    
       <li class="hero__anchor">
+        <a href="#about" class="link"></a>
         <button class="button button--light hero__button hero__button--about">
           How it’s made?
         </button>
+        </a>
       </li>
     </ul>
   </div>
@@ -30,7 +35,7 @@
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
       labore et
     </p>
-    <button class="hero__modal-btn">
+    <button class="hero__modal-btn button--light">
       <svg class="hero__icon" width="8" height="8">
         <use href="./images/icons.svg#icon-arrow"></use>
       </svg>
