--- a/src/sass/layout.scss/_hero.scss
+++ b/src/sass/layout.scss/_hero.scss
@@ -281,6 +281,7 @@
     height: 18px;
     border-radius: 50%;
     border: none;
+    cursor: pointer;
     background-color: $btn-light-color;
   }
 
