--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,22 +1,22 @@
 
-
 <section class="advantages">
-    <ul class="advantages__list">
+    <ul class="advantages__list list">
+        <h1 class=".visually-hidden"></h1>
          <li class="advantages__item">
-            <img src="../src/images/mobile/advantages/icon1_mobile.png" alt="bucket">
-            <h2 class="advantages__heading">721</h2>
+            <!-- <img src="../src/images/mobile/advantages/icon1_mobile.png" alt="bucket"> -->
+            <h2 class="advantages__number">721</h2>
             <p class="advantages__text">Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
         </li>
         <li class="advantages__item">
-            <img src="../src/images/mobile/advantages/icon2_mobile.png" alt="bucketapple">
-             <h2 class="advantages__heading">16KG</h2>
+            <!-- <img src="../src/images/mobile/advantages/icon2_mobile.png" alt="bucketapple"> -->
+             <h2 class="advantages__number">16KG</h2>
              <p class="advantages__text">Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
         </li>
         <li class="advantages__item">
-            <img src="../src/images/mobile/advantages/icon3_mobile.png" alt="heart">
-            <h2 class="advantages__heading">84</h2>
+            <!-- <img src="../src/images/mobile/advantages/icon3_mobile.png" alt="heart"> -->
+            <h2 class="advantages__number">84</h2>
             <p class="advantages__text" >Aliquam ac dui vel dui vulputate
             consectetur. Mauris massa.</p>
         </li>
