--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,24 +1,26 @@
 <section class="products">
     <div class="container">
-        <p class="title-label">100% natural</p>
+        <p class="label title-label">100% natural</p>
         <h2 class="title products__title">products</h2>
+      
         <ul class="list products__list">
-            <li class="products__item">
+            <li class="products__item products__item--cream">
                 <h3 class="proudcts__item-name">ice cream</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
                 <button type="button" class="products__item-button"></button>
             </li>
             <li class="products__item">
-                <h3 class="proudcts__item-name">ice coffee</h3>
+                <h3 class="proudcts__item-name products__item--coffe">ice coffee</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
                 <button type="button" class="products__item-button"></button>
             </li>
             <li class="products__item">
-                <h3 class="proudcts-item-name">milkshakes</h3>
+                <h3 class="proudcts-item-name products__item--milkshakes">milkshakes</h3>
                 <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
                 <button type="button" class="products__item-button"></button>
             </li>
         
         </ul>
+      
     </div>
 </section>
