--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,42 +1,22 @@
-<div class="container about">
+<div class="container about" id="about">
   <p class="label about__label">tradition and love</p>
   <h class="title about__title">how it’s made?</h>
-  <picture>
-    <source
-      srcset="./images/desktop/about/about.jpg 1x, ./images/desktop/about/about@2x.jpg 2x"
-      media="(min-width:1280px)"
-      type="image/jpeg"
-    />
-    <source
-      srcset="./images/tablet/about/about.jpg 1x, ./images/tablet/about/about@2x.jpg 2x"
-      media="(min-width:768px)"
-      type="image/jpeg"
-    />
-    <source
-      srcset="./images/mobile/about/about.jpg 1x, ./images/mobile/about/about@2x.jpg 2x"
-      media="(max-width:767.98px)"
-      type="image/jpeg"
-    />
-    <img
-      class="about__picture"
-      src="./images/mobile/about/about.jpg"
-      alt="Коровка и графин с молоком"
-    />
-  </picture>
-  <p class="about__lead about__paragraph">
-    Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem
-    eget, egestas eros. Maecenas eleifend erat at justo fringilla.
-  </p>
-  <p class="about__text about__paragraph">
-    Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in
-    imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus.
-    Cras massa nibh, tincidunt.
-  </p>
-  <p class="about__text about__paragraph">Aliquam erat volutpat. Aenean accumsan.</p>
-  <button class="button button--light about__btn">
-    Read more
-    <svg class="about__icon" width="7" height="10">
-      <use href="./images/icons.svg#check-right"></use>
-    </svg>
-  </button>
+  <div class="about__paragraph">
+    <p class="about__lead">
+      Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem
+      eget, egestas eros. Maecenas eleifend erat at justo fringilla.
+    </p>
+    <p class="about__text">
+      Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in
+      imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus.
+      Cras massa nibh, tincidunt.
+    </p>
+    <p class="about__text">Aliquam erat volutpat. Aenean accumsan.</p>
+    <button class="button button--light about__btn">
+      Read more
+      <svg class="button__icon button__icon--dark" width="7" height="10">
+        <use href="./images/icons.svg#check-right"></use>
+      </svg>
+    </button>
+  </div>
 </div>
