Заменяет див на секцию

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<div class="container about" id="about">
+<section class="about container" id="about">
   <p class="label about__label">tradition and love</p>
   <h class="title about__title">how it’s made?</h>
   <div class="about__paragraph">
@@ -19,4 +19,4 @@
       </svg>
     </button>
   </div>
-</div>
+</section>
