--- a/src/sass/layout.scss/_about.scss
+++ b/src/sass/layout.scss/_about.scss
@@ -1,8 +1,4 @@
 .about {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
   padding-top: 125px;
   padding-bottom: 20px;
 
@@ -61,6 +57,8 @@
   margin-bottom: 15px;
 }
 .about__title {
+  display: block;
+  text-align: center;
   margin-bottom: 26px;
 
   @include for-tablet {
