Добавляет секцию отдельно от контейнера
Молоко строго привязано к ширине контейнера. Чтобы отвязать его и дать ему расширяться на всю ширину экрана, при этом чтобы оно не обрезалось по краям, нужно объединить секции эту и нижнюю в одну. Тогда молоко будет разливаться и секцией ниже при расширении экрана.

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,22 +1,24 @@
-<section class="about container" id="about">
-  <p class="label about__label">tradition and love</p>
-  <h class="title about__title">how it’s made?</h>
-  <div class="about__paragraph">
-    <p class="about__lead">
-      Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem
-      eget, egestas eros. Maecenas eleifend erat at justo fringilla.
-    </p>
-    <p class="about__text">
-      Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in
-      imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus.
-      Cras massa nibh, tincidunt.
-    </p>
-    <p class="about__text">Aliquam erat volutpat. Aenean accumsan.</p>
-    <button class="button button--light about__btn">
-      Read more
-      <svg class="button__icon button__icon--dark" width="7" height="10">
-        <use href="./images/icons.svg#check-right"></use>
-      </svg>
-    </button>
+<section class="about" id="about">
+  <div class="container about__container">
+    <p class="label about__label">tradition and love</p>
+    <h class="title about__title">how it’s made?</h>
+    <div class="about__paragraph">
+      <p class="about__lead">
+        Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus
+        lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.
+      </p>
+      <p class="about__text">
+        Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci
+        in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna
+        maximus. Cras massa nibh, tincidunt.
+      </p>
+      <p class="about__text">Aliquam erat volutpat. Aenean accumsan.</p>
+      <button class="button button--light about__btn">
+        Read more
+        <svg class="button__icon button__icon--dark" width="7" height="10">
+          <use href="./images/icons.svg#check-right"></use>
+        </svg>
+      </button>
+    </div>
   </div>
 </section>
