--- a/src/sass/layout.scss/_about.scss
+++ b/src/sass/layout.scss/_about.scss
@@ -1,10 +1,12 @@
 .about {
+  background-color: #fff5f6;
+}
+.about__container {
   padding-top: 125px;
   padding-bottom: 20px;
 
   font-weight: 500;
 
-  background-color: #fff5f6;
   background-image: url('../images/mobile/about/bg-milk.png');
   background-size: contain;
   background-repeat: no-repeat;
